# heist-highlighter

./: .gitignore  Makefile  heist-highlighter.cabal
src/Text/Templating/Heist/Splices/: Highlighter.hs
test/: Main.hs
test/fixtures/: haskell-linenos.html  haskell.html  html.html  python-linenos.html  python.html
test/templates/: default-lexer-linenos.tpl  default-lexer.tpl  literal-html.tpl  override-lexer-linenos.tpl  override-lexer.tpl
