Name          : heist-highlighter
Version       : 0.1.0
Synopsis      : Heist splice for syntax highlighting
Description   : Heist splice for syntax highlighting using the highlighter package.
Homepage      : https://github.com/dag/heist-highlighter
Bug-Reports   : https://github.com/dag/heist-highlighter/issues
License       : BSD3
License-file  : LICENSE
Author        : Dag Odenhall
Maintainer    : dag.odenhall@gmail.com
Category      : Web
Build-type    : Simple
Cabal-version : >=1.8

Source-Repository head
  Type     : git
  Location : git://github.com/dag/heist-highlighter.git

Flag tests
  Description : Build the test suite
  Default     : False

Library
  HS-Source-Dirs  : src
  GHC-Options     : -Wall
  Exposed-modules : Text.Templating.Heist.Splices.Highlighter
  Build-depends   :
    base        == 4.*,
    bytestring  == 0.9.*,
    heist       == 0.7.*,
    highlighter == 0.2.*,
    text        == 0.11.*,
    xmlhtml     == 0.1.*

Executable test-heist-highlighter
  if flag(tests)
    Buildable    : True
  else
    Buildable    : False
  HS-Source-Dirs : test
  Main-Is        : Main.hs
  GHC-Options    : -Wall -threaded -rtsopts -with-rtsopts=-N
  Build-depends  :
    base                 == 4.*,
    blaze-builder        == 0.3.*,
    bytestring           == 0.9.*,
    heist                == 0.7.*,
    heist-highlighter    == 0.1.0,
    highlighter          == 0.2.*,
    HUnit                == 1.2.*,
    test-framework-hunit == 0.2.*,
    test-framework-th    == 0.2.*,
    xmlhtml              == 0.1.*
